@startuml control_flow_divider_class_diagram

title ControlFlowDivider: Class Diagram

legend top left
    |= Color         |= Description                    |
    | <#Beige>       | Base classes                    |
    | <#LightBlue>   | ControlFlowDivider              |
endlegend

class "PtpTimeInfo" as time_info #Beige {
    +ptp: uint64
    +local_time: uint64
    +status: int
}

abstract class "BaseMachine" as base_machine #Beige {
    +GetName(): string
    +Init(): bool
}

abstract class "ProactiveMachine" as proactive_machine #Beige {
    +Start(): void
    +Stop(): void
}

abstract class "EventDrivenMachine" as event_machine #Beige {
    +NotifyEvent(): void
    #OnEvent(): void
    #OnTimeout(): void
}

abstract class "Consumer<T>" as consumer #Beige {
    +OnMessage(data: T): void
}

abstract class "Producer<T>" as producer #Beige {
    +SetPublishCallback(callback): void
    #Publish(data: T): void
}

class "ControlFlowDivider<DataType, BufferSize>" as cfd #LightBlue {
    -data_buffer_: circular_buffer<DataType, BufferSize>
    +OnMessage(data: DataType): void
    +SetPublishCallback(callback): void
    #OnEvent(): void
    #OnTimeout(): void
}

base_machine <|-- proactive_machine
proactive_machine <|-- event_machine
event_machine <|-- cfd
consumer <|.. cfd
producer <|.. cfd

cfd --> time_info : processes

@enduml
